main fixes on text, added bg-urls to section images, added profile-pic

--- a/theme/psychology.scss
+++ b/theme/psychology.scss
@@ -572,3 +572,147 @@ i{
                 color: $white;
         }
 }
+
+
+// PICTURES
+#ansia-stress{
+        .section-wrapper{
+                .section-content{
+                        .section-block2{
+                                .img{
+                                        background: url('https://images.unsplash.com/photo-1581333100576-b73befd79a9b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80');
+                                        background-position: center;
+                                        background-size: cover;
+                                }
+                        }
+                }
+        }
+}
+
+#relazioni{
+        .section-wrapper{
+                .section-content{
+                        .section-block2{
+                                .img{
+                                        background: url('https://images.unsplash.com/photo-1513682121497-80211f36a7d3?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=388&q=80');
+                                        background-position: center;
+                                        background-size: cover;
+                                }
+                        }
+                }
+        }
+}
+
+#lgbt{
+        .section-wrapper{
+                .section-content{
+                        .section-block2{
+                                .img{
+                                        background: url('https://images.unsplash.com/photo-1530194884744-71a772b44290?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1034&q=80');
+                                        background-position: center;
+                                        background-size: cover;
+                                }
+                        }
+                }
+        }
+}
+
+#lavoro{
+        .section-wrapper{
+                .section-content{
+                        .section-block2{
+                                .img{
+                                        background: url('https://images.unsplash.com/photo-1617720097949-d6fd9ed1d71b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80');
+                                        background-position: center;
+                                        background-size: cover;
+                                }
+                        }
+                }
+        }
+}
+
+#sesso{
+        .section-wrapper{
+                .section-content{
+                        .section-block2{
+                                .img{
+                                        background: url('https://images.unsplash.com/photo-1523467179876-7108ea631145?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=418&q=80');
+                                        background-position: center;
+                                        background-size: cover;
+                                }
+                        }
+                }
+        }
+}
+
+
+#situazioni-difficili{
+        .section-wrapper{
+                .section-content{
+                        .section-block2{
+                                .img{
+                                        background: url('https://images.unsplash.com/photo-1589828994425-cee7c6e8dbf8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=912&q=80');
+                                        background-position: center;
+                                        background-size: cover;
+                                }
+                        }
+                }
+        }
+}
+
+#pensieri{
+        .section-wrapper{
+                .section-content{
+                        .section-block2{
+                                .img{
+                                        background: url('https://images.unsplash.com/photo-1560803262-95a9de00a057?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80');
+                                        background-position: center;
+                                        background-size: cover;
+                                }
+                        }
+                }
+        }
+}
+
+
+#estero{
+        .section-wrapper{
+                .section-content{
+                        .section-block2{
+                                .img{
+                                        background: url('https://images.unsplash.com/photo-1601296200639-89349ce76a48?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80');
+                                        background-position: right;
+                                        background-size: cover;
+                                }
+                        }
+                }
+        }
+}
+
+#studio{
+        .section-wrapper{
+                .section-content{
+                        .section-block2{
+                                .img{
+                                        background: url('https://images.unsplash.com/photo-1497633762265-9d179a990aa6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=873&q=80');
+                                        background-position: center;
+                                        background-size: cover;
+                                }
+                        }
+                }
+        }
+}
+
+#why{
+        .section-wrapper{
+                .section-content{
+                        .section-block2{
+                                .img{
+                                        background: url('https://images.unsplash.com/photo-1527525443983-6e60c75fff46?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=770&q=80');
+                                        background-position: center;
+                                        background-size: cover;
+                                }
+                        }
+                }
+        }
+}
