--- a/theme/psychology.css
+++ b/theme/psychology.css
@@ -308,10 +308,10 @@ input {
   opacity: .5 !important; }
   @media only screen and (max-width: 768px) {
     .mousemove {
-      display: none; } }
+      display: none !important; } }
   @media only screen and (max-width: 425px) {
     .mousemove {
-      display: none; } }
+      display: none !important; } }
 
 .divider {
   border-radius: 8px; }
