--- a/theme/psychology.scss
+++ b/theme/psychology.scss
@@ -546,8 +546,8 @@ input{
         transition: 0.08s ease;
         z-index: -1;
         opacity: .5 !important;
-        @media only screen and (max-width: 768px){display: none;}
-        @media only screen and (max-width: 425px){display: none;}
+        @media only screen and (max-width: 768px){display: none !important;}
+        @media only screen and (max-width: 425px){display: none !important;}
 }
 
 // DIVIDER
