--- a/theme/psychology.scss
+++ b/theme/psychology.scss
@@ -33,7 +33,7 @@ $package3: #c79b49;
 $img1: url('https://images.unsplash.com/photo-1464822759023-fed622ff2c3b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80');
 $img2: url('https://images.unsplash.com/photo-1480497490787-505ec076689f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1738&q=80');
 $img3: url('https://images.unsplash.com/photo-1498855926480-d98e83099315?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80');
-
+$img4: url('https://images.unsplash.com/photo-1632861116304-b27d2121a59b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1746&q=80');
 
 // BUTTONS
 
@@ -714,5 +714,51 @@ i{
                                 }
                         }
                 }
+        }
+}
+
+
+// BLOG
+.blog-posts{
+        width: 100%;
+        margin: auto;
+        @media only screen and (max-width: 1024px){width: 90%; margin: auto;}
+        @media only screen and (max-width: 768px){width: 90%; margin: auto;}
+        .blog-article-item{
+                margin: 3rem auto;
+                .card{
+                        width: 100%;
+                        margin: auto;
+                        .card-title{
+                                margin: 1rem auto;
+                        }
+                }
+        }
+}
+
+#page-header{
+        &.pic-bg{
+                &.blog-header{
+                background: $primary-gradient-transparent, $img4;
+                background-position: center;
+                background-size: cover;
+                background-repeat: no-repeat;
+                }
+        }
+}
+
+.section-wrapper{
+        &.blog-img{
+                margin: 0px auto;
+                padding: 0rem !important;
+                .section-content{
+                        .section-block1{
+                                img{
+                                        width: 100%;
+                                        margin: auto;
+                                        border-radius: $radius;
+                                }
+                        }
+        }
         }
 }
