--- a/theme/psychology.scss
+++ b/theme/psychology.scss
@@ -631,6 +631,20 @@ i{
         }
 }
 
+#consulenza-tecnica{
+        .section-wrapper{
+                .section-content{
+                        .section-block2{
+                                .img{
+                                        background: url('https://plus.unsplash.com/premium_photo-1664373232561-41102ae7f848?q=80&w=1588&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+                                        background-position: center;
+                                        background-size: cover;
+                                }
+                        }
+                }
+        }
+}
+
 #sesso{
         .section-wrapper{
                 .section-content{
